Bug 1220054 - fix bookmark title is been cut off. r=yifan

--- a/tv_apps/browser/style/smartList.css
+++ b/tv_apps/browser/style/smartList.css
@@ -83,7 +83,6 @@
   display: inline-block;
   width: 100%;
   font-size: 4rem;
-  line-height: 4rem;
   color: #fff;
   overflow: hidden;
   white-space: nowrap;
